--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "yarn": "^1.22.19"
   },
   "scripts": {
-    "start": "set PORT=3006 && react-scripts start",
+    "start": "react-scripts start",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "build": "react-scripts build",
